# cli-dle

./: CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release-plz.yml  release.yml
scripts/: vectors_generator.py
src/: lib.rs  main.rs
src/dailies/: mod.rs
src/data/: mod.rs
src/guess_validation/: mod.rs
src/help/: mod.rs
src/infinite/: mod.rs
src/output_display/: mod.rs
wix/: main.wxs
